...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="tcD-OB-8Ne"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eqX-M9-E9o">
                                        <rect key="frame" x="0.0" y="60" width="334" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="k3b-aA-6dz"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wvD-kA-pN9">
                                        <rect key="frame" x="0.0" y="120" width="334" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="7ID-rB-2QZ"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
...
                                        <connections>
                                            <segue destination="UIX-w3-TwW" kind="show" id="di0-rT-QLY"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VrT-79-ULj">
                                        <rect key="frame" x="0.0" y="80" width="334" height="60"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <segue destination="aQ5-Dn-1UL" kind="show" id="7iz-DX-iwW"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
